Initial support for Play 2.3.x, 2.4.x, 2.5.x.
