# server/src/main/scala/eu/unicredit/UserAuthority.scala
@@ -1,0 +1,7 @@
+package eu.unicredit
+
+/**
+  * Created by romastyi on 06.05.17.
+  */
+
+case class UserAuthority(roles: Set[UserRole.Value])
